# CubismUP_2D

./: AUTHORS  CMakeLists.txt  LICENSE  README.md
Cubism/: ._BlockLab.h  ._SerializerIO_ImageVTK.h  Grid.h  HDF5Dumper_MPI.h  Matrix4D.h  SerializerIO_ImageVTK.h
CubismUP_2D.xcodeproj/: project.pbxproj
CubismUP_2D.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Documentation/html/: _8___block_lab_8h.html  _8___block_lab_8h.js  _8___block_lab_8h_source.html  _8___boundary_conditions_8h.html  _8___boundary_conditions_8h.js  _8___boundary_conditions_8h_source.html  _8___definitions_8h.html  _8___definitions_8h_source.html  _8___interface_f_f_t_w_8h.html  _8___interface_f_f_t_w_8h.js  _8___interface_f_f_t_w_8h_source.html  _8___interface_fortran_8h.html  _8___interface_fortran_8h.js  _8___interface_fortran_8h_source.html  _8___layer_8h.html  _8___layer_8h.js  _8___layer_8h_source.html  _8___layer_to_v_t_k_8h.html  _8___layer_to_v_t_k_8h.js  _8___layer_to_v_t_k_8h_source.html  _8___multigrid_hypre_8h.html  _8___multigrid_hypre_8h.js  _8___multigrid_hypre_8h_source.html  _8___multigrid_hypre___o_l_d_8h.html  _8___multigrid_hypre___o_l_d_8h.js  _8___multigrid_hypre___o_l_d_8h_source.html  _8___operator_advection_8h.html  _8___operator_advection_8h.js  _8___operator_advection_8h_source.html  _8___operator_compute_disk_8h.html  _8___operator_compute_disk_8h.js  _8___operator_compute_disk_8h_source.html  _8___operator_cut_8h.html  _8___operator_cut_8h.js  _8___operator_cut_8h_source.html  _8___operator_diffusion_8h.html  _8___operator_diffusion_8h.js  _8___operator_diffusion_8h_source.html  _8___operator_divergence_8h.html  _8___operator_divergence_8h.js  (+1751 more)
Documentation/latex/: _8___boundary_conditions_8h.tex  _8___definitions_8h.tex  _8___layer_to_v_t_k_8h.tex  _8___operator_advection_8h.tex  _8___operator_compute_disk_8h.tex  _8___operator_cut_8h.tex  _8___operator_diffusion_8h.tex  _8___operator_i_c_8h.tex  _8___operator_split_p_8h.tex  _8___operator_vorticity_8h.tex  _8___operators___d_f_t_8h.tex  _8___poisson_solver_scalar_f_f_t_w_8cpp.tex  _8___poisson_solver_vector_f_f_t_w_8h.tex  _8___process_operators_o_m_p_8cpp.tex  _8___process_operators_o_m_p_8h.tex  _8___serializer_i_o___image_v_t_k_8h.tex  _8___sim___f_s_i___fixed_8cpp.tex  _8___sim___f_s_i___fixed_8h.tex  _8___sim___f_s_i___gravity_8cpp.tex  _8___sim___f_s_i___gravity_8h.tex  _8___sim___f_s_i___moving_8cpp.tex  _8___sim___f_s_i___moving_8h.tex  _8___test_advection_8cpp.tex  _8___test_advection_8h.tex  _8___test_diffusion_8cpp.tex  _8___test_diffusion_8h.tex  _8___test_gravity_8cpp.tex  _8___test_gravity_8h.tex  _8___test_penalization_8cpp.tex  _8___test_penalization_8h.tex  _8___test_pressure_8h.tex  (+1083 more)
launch/: AddedMass.sh  Andersen.sh  AndersenVarDensity.sh  Andersen_ParameterStudy.sh  Bubble.sh  Chen.sh  Coquerelle.sh  Disks.sh  FallingDensities.sh  FallingRe40.sh  FallingRisingSanders.sh  FallingVarDensityDisk.sh  FallingVarDensityDisk_ParamStudy.sh  Fields.sh  Fields_parameter_study.sh  Glowinski.sh  GlowinskiFixed.sh  GlowinskiWalls.sh  Guermond.sh  Herrmann.sh  Kolomenskiy.sh  Mordant.sh  MordantInteractiveTests.sh  Namkoong.sh  Poiseuille.sh  ShearLayer.sh  ShearLayer2.sh  ShearLayerCFL.sh  TankVarDensityDisk.sh  ThesisAddedMass.sh  ThesisDrag.sh  ThesisFallingNamkoong.sh  ThesisFallingNamkoongEuler.sh  ThesisGlowinski.sh  ThesisGlowinskiEuler.sh  ThesisGlowinskiFixed.sh  ThesisOscillatingCylinder.sh  ThesisPlotAddedMass.py  ThesisRTI.sh  ThesisRisingVIV.sh  (+31 more)
makefiles/: Makefile  make.brutus  make.euler  makeTest.sh  simulation  test
source/: BoundaryConditions.h  CoordinatorAdvection.h  CoordinatorBodyVelocities.h  CoordinatorCleanTmp.h  CoordinatorComputeShape.h  CoordinatorDiffusion.h  CoordinatorGravity.h  CoordinatorIC.h  CoordinatorPenalization.h  CoordinatorPressure.h  CoordinatorPressureGradient.h  CoordinatorTankTread.h  CoordinatorUpdate.h  Definitions.h  GenericCoordinator.h  GenericOperator.h  InterfaceFFTW.h  InterfaceFortran.h  InterpolationKernels.h  Layer.h  LayerToVTK.h  Matrix2D.h  MultigridHypre.h  MultigridHypre_OLD.h  OperatorAdvection.h  OperatorComputeShape.h  OperatorCut.h  OperatorDiffusion.h  OperatorDivergence.h  OperatorGradP.h  OperatorGravity.h  OperatorIC.h  OperatorPenalization.h  OperatorPressureGradient.h  OperatorSplitP.h  OperatorVarCoeffPoisson.h  OperatorVorticity.h  Operators_DFT.h  Operators_DFT_FFTW.cpp  PoissonSolverScalarFFTW.cpp  (+60 more)
(+3895 files in other folders)
