cmake_minimum_required(VERSION 3.2)
project(CubismUP_2D)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    Cubism/ArgumentParser.h
    Cubism/BlockInfo.h
    Cubism/BlockLab.h
    Cubism/BlockLabMPI.h
    Cubism/DependencyCubeMPI.h
    Cubism/Grid.h
    Cubism/GridMorton.h
    Cubism/GridMPI.h
    Cubism/HDF5Dumper.h
    Cubism/HDF5Dumper_MPI.h
    Cubism/Indexers.h
    Cubism/LosslessCompression.h
    Cubism/Matrix3D.h
    Cubism/Matrix4D.h
    Cubism/Profiler.cpp
    Cubism/Profiler.h
    Cubism/PUPkernelsMPI.h
    Cubism/SerializerIO.h
    Cubism/SerializerIO_ImageVTK.h
    Cubism/SerializerIO_VP.h
    Cubism/StencilInfo.h
    Cubism/SynchronizerMPI.h
    Cubism/Timer.h
    Cubism/ZBinDumper.h
    Cubism/ZBinDumper_MPI.h
    launch/Bubble.sh
    launch/Fields.sh
    launch/Glowinski.sh
    launch/Guermond.sh
    launch/Herrmann.sh
    launch/Jets.sh
    launch/Kolomenskiy.sh
    launch/launchInteractiveSimulation.sh
    launch/launchSimulation.sh
    launch/launchTests.sh
    launch/launchValidationDrag.sh
    launch/Namkoong.sh
    launch/Poiseuille.sh
    launch/ShearLayer.sh
    launch/testAdvection.sh
    launch/testDiffusion.sh
    launch/testPoisson.sh
    launch/testPressure.sh
    launch/TravelingWave.sh
    makefiles/make.brutus
    makefiles/make.euler
    makefiles/Makefile
    makefiles/makeTest.sh
    source/BoundaryConditions.h
    source/common.h
    source/CoordinatorAdvection.h
    source/CoordinatorBodyVelocities.h
    source/CoordinatorComputeShape.h
    source/CoordinatorDiffusion.h
    source/CoordinatorGravity.h
    source/CoordinatorIC.h
    source/CoordinatorPenalization.h
    source/CoordinatorPressure.h
    source/CoordinatorPressureGradient.h
    source/Definitions.h
    source/GenericCoordinator.h
    source/GenericOperator.h
    source/InterpolationKernels.h
    source/Layer.h
    source/LayerToVTK.h
    source/main.cpp
    source/mainTest.cpp
    source/Matrix2D.h
    source/MultigridHypre.h
    source/OperatorAdvection.h
    source/OperatorComputeShape.h
    source/OperatorDiffusion.h
    source/OperatorDivergence.h
    source/OperatorGradP.h
    source/OperatorGravity.h
    source/OperatorIC.h
    source/OperatorPenalization.h
    source/OperatorPressureGradient.h
    source/OperatorSplitP.h
    source/OperatorVorticity.h
    source/PoissonSolverScalarFFTW.cpp
    source/PoissonSolverScalarFFTW.h
    source/PoissonSolverVectorFFTW.h
    source/ProcessOperatorsOMP.cpp
    source/ProcessOperatorsOMP.h
    source/Shape.h
    source/Sim_Bubble.cpp
    source/Sim_Bubble.h
    source/Sim_FSI_Fixed.cpp
    source/Sim_FSI_Fixed.h
    source/Sim_FSI_Gravity.cpp
    source/Sim_FSI_Gravity.h
    source/Sim_FSI_Moving.cpp
    source/Sim_FSI_Moving.h
    source/Sim_Jet.cpp
    source/Sim_Jet.h
    source/Sim_RayleighTaylor.cpp
    source/Sim_RayleighTaylor.h
    source/Simulation_Fluid.h
    source/Simulation_FSI.h
    source/Simulation_MP.h
    source/Test.h
    source/TestAdvection.cpp
    source/TestAdvection.h
    source/TestDiffusion.cpp
    source/TestDiffusion.h
    source/TestGravity.cpp
    source/TestGravity.h
    source/TestPenalization.cpp
    source/TestPenalization.h
    source/TestPoiseuille.cpp
    source/TestPoiseuille.h
    source/TestPressure.cpp
    source/TestPressure.h
    source/TestRotation.cpp
    source/TestRotation.h
    source/TestShearLayer.cpp
    source/TestShearLayer.h
    source/TestTranslation.cpp
    source/TestTranslation.h
    source/TestTravelingWave.cpp
    source/TestTravelingWave.h
    source/TestVarCoeffPoisson.cpp
    source/TestVarCoeffPoisson.h
    source/Timer.h
    tools/fpzip/examples/testfpzip.cpp
    tools/fpzip/inc/codec.h
    tools/fpzip/inc/fpe.h
    tools/fpzip/inc/fpzip.h
    tools/fpzip/inc/front.h
    tools/fpzip/inc/myfpzip.h
    tools/fpzip/inc/pccodec.h
    tools/fpzip/inc/pcdecoder.h
    tools/fpzip/inc/pcencoder.h
    tools/fpzip/inc/pcmap.h
    tools/fpzip/inc/rcdecoder.h
    tools/fpzip/inc/rcencoder.h
    tools/fpzip/inc/rcmodel.h
    tools/fpzip/inc/rcqsmodel.h
    tools/fpzip/inc/read.h
    tools/fpzip/inc/write.h
    tools/fpzip/src/rcdecoder.cpp
    tools/fpzip/src/rcencoder.cpp
    tools/fpzip/src/rcqsmodel.cpp
    tools/fpzip/src/read.cpp
    tools/fpzip/src/write.cpp)

add_executable(CubismUP_2D ${SOURCE_FILES})